--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==2.2.12
 django-filter==2.2.0
+django-oauth-toolkit==1.3.2
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
 idna==2.9
@@ -11,6 +12,7 @@ itypes==1.2.0
 Jinja2==2.11.2
 Markdown==3.2.1
 MarkupSafe==1.1.1
+oauthlib==3.1.0
 openapi-codec==1.3.2
 postgres==3.0.0
 psycopg2-binary==2.8.5
