--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-filter==2.2.0
 django-oauth-toolkit==1.3.2
 django-rest-swagger==2.2.0
 djangorestframework==3.11.0
+djangorestframework-simplejwt==4.4.0
 idna==2.9
 itypes==1.2.0
 Jinja2==2.11.2
@@ -17,6 +18,7 @@ openapi-codec==1.3.2
 postgres==3.0.0
 psycopg2-binary==2.8.5
 psycopg2-pool==1.1
+PyJWT==1.7.1
 pytz==2019.3
 requests==2.23.0
 simplejson==3.17.0
